# simple-gateway

./: .gitattributes  Cargo.toml  README.md  clippy.toml  format.bat  mock_service.py  mock_service2.py  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml
New folder/: auth.py  cargo.toml  docker-compose.yml  dockerfile.rs  main.py  mock_services.py
New folder/config/: gateway.yaml
New folder/src/: main.rs
New folder/src/aut/: jwt.rs  mod.rs
New folder/src/config/: mod.rs
New folder/src/gateway/: handler.rs  middleware.rs  mod.rs  router.rs
New folder/src/metrics/: mod.rs
New folder/src/services/: discovery.rs  mod.rs
src/: consul_discovery.rs  logging.rs  main.rs  message_queue.rs  metrics.rs  middleware.rs  rate_limiter.rs  service_registry.rs
src/auth/: mod.rs
